# sofa

./: .gitignore  README.md  pyproject.toml
notebook/: human_annotations.ipynb  instruction_visualize.ipynb  plot_long_term.ipynb  plot_rules.ipynb  plot_test_set.ipynb
scripts/: alignment_tax.sh  calc_rules.sh  download.sh  eval_bbq.sh  eval_rules.sh  eval_scope.sh  eval_truthfulqa_mc.sh  finetune_llama_2_13b_cd_v5_1106.sh  finetune_llama_2_13b_cd_v5_1106_uncensored.sh  finetune_llama_2_13b_cd_v5_1106_uncensored_wo_sys_align.sh  finetune_llama_2_13b_cd_v5_1106_uncensored_wo_sys_align_reference.sh  finetune_llama_2_13b_cd_v5_1106_wo_sys_align.sh  finetune_llama_2_13b_cd_v5_1106_wo_sys_align_reference.sh  finetune_llama_2_13b_sharegpt.sh  finetune_llama_2_13b_sharegpt_uncensored.sh  finetune_llama_2_13b_sharegpt_uncensored_wo_sys_align.sh  finetune_llama_2_13b_sharegpt_wo_sys_align.sh  finetune_llama_2_7b_cd_v5_1106.sh  finetune_llama_2_7b_cd_v5_1106_uncensored.sh  finetune_llama_2_7b_cd_v5_1106_uncensored_wo_sys_align.sh  finetune_llama_2_7b_cd_v5_1106_uncensored_wo_sys_align_reference.sh  finetune_llama_2_7b_cd_v5_1106_wo_sys_align.sh  finetune_llama_2_7b_cd_v5_1106_wo_sys_align_reference.sh  finetune_llama_2_7b_sharegpt.sh  finetune_llama_2_7b_sharegpt_uncensored.sh  finetune_llama_2_7b_sharegpt_uncensored_wo_sys_align.sh  finetune_llama_2_7b_sharegpt_wo_sys_align.sh  inference_hh.sh  inference_hh_adv.sh  judge_hh.sh  k_th_turn_inference_reference.sh
src/sofa/data/: build_dialog_from_context_distillation_data.py  priority_distillation_openai.py  reverse_generate.py  (+3 more)
(+19 files in other folders)
